...
    <string name="default_playlist_name">No name</string>
    <string name="rename_dialog_title">Playlist name:</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="main_playlist_name">All songs</string>
    <string name="search">search</string>
    <string name="sort_alphabetically">Name</string>
    <string name="sort_by_bpm">BPM</string>
    <string name="sort_by_folders">Directories</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_duration">Duration</string>
    <string name="sort_dialog_title">Sort by</string>
    <string name="sort">Sorting</string>
    <string name="build_library_started">BPM scanning started.</string>
    <string name="build_library_finished">BPM scanning finished</string>
    <string name="clear_library_finished">BPM data has been cleared</string>
    <string name="pref_experimental_features">Extra</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
...
