...
        android:id="@+id/search_menu"
        app:showAsAction="always"
        android:title="@string/search">
    </item>
    <item
        android:icon="@drawable/ic_sort_black_24dp"
        android:id="@+id/sort_menu"
        app:showAsAction="collapseActionView"
        android:title="@string/sort">
    </item>
    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings_title">
...
