...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/first_line"
                    style="@style/SongNameTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#555555"
                    />

...
