<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/pref_music_library"
        android:title="@string/pref_music_library">
        <com.juztoss.rhythmo.views.items.MusicLibraryPreference
            android:key="@string/pref_build_library"
            android:summary="@string/build_library_desc"
            android:title="@string/pref_build_library"
            android:widgetLayout="@layout/library_preference"/>

        <com.juztoss.rhythmo.views.items.ClearLibraryPreference
            android:key="@string/pref_clear_library"
            android:summary="@string/clear_library_desc"
            android:title="@string/pref_clear_library"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_experimental_features"
        android:title="@string/pref_experimental_features">
        <com.juztoss.rhythmo.views.items.BPMShiftPickerPreference
            android:defaultValue="0"
            android:key="@string/pref_bpm_auto_shift_range"
            android:negativeButtonText="@string/dialog_cancel"
            android:positiveButtonText="@string/dialog_ok"
            android:summary="@string/pref_bpm_auto_shift_range_desc"
            android:title="@string/pref_bpm_auto_shift_range"
            />
        <CheckBoxPreference
            android:key="@string/pref_recognize_bpm_from_name"
            android:summary="@string/pref_recognize_bpm_from_name_desc"
            android:title="@string/pref_recognize_bpm_from_name"
            android:defaultValue="true"/>

        <ListPreference
            android:key="@string/pref_theme"
            android:summary="@string/pref_theme_desc"
            android:title="@string/pref_theme"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_entry_values"
            android:defaultValue="1"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_about"
        android:title="@string/pref_about">
        <Preference
            android:key="@string/pref_license_button"
            android:summary="@string/pref_license_desc"
            android:title="@string/pref_license_button"/>

    </PreferenceCategory>
</PreferenceScreen>